src/objects/Litigation__c.object
<CustomObject>
    <description>AVB Custom Object - This object is used to store information related to current litigation activities.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Litigation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Auto_Response_Email__c</fullName>
        <label>Auto-Response Email</label>
        <picklist>
            <picklistValues>
                <fullName>Litigation Activity Opened: &quot;If applicable, please send any necessary paperwork...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Date: &quot;The associate who signed the proof of service will need to appear at court...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Date: &quot;An associate will need to be on-call to appear at court...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Date: &quot;An associate is required to be present at court...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock-out: &quot;Please be sure to have the appropriate amount of petty cash available to pay...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock-out: &quot;Please remember it is very important to wait for the Constable/Marshall/Sheriff...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock-out: &quot;It is very important the actual date and time of the lock-out is not known by the resident...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock-out: &quot;Please have the appropriate number of associates available to perform the lock-out...&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lock-out: &quot;Please be prepared to change the locks once the Constable/Marshall/Sheriff has returned...&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Date_Old__c</fullName>
        <description>Old Court Date Field</description>
        <label>Court Date Old</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <label>Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Time__c</fullName>
        <label>Court Time</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Date__c</fullName>
        <label>Default Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <inlineHelpText>Multiple emails need to be seperated by a semi colon</inlineHelpText>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FED__c</fullName>
        <label>FED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Judgment_Amount__c</fullName>
        <label>Judgment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Foundation_User__c</fullName>
        <description>This does not represent the Salesforce user.  It represents the Foundation user who entered a Litigation Record in Foundation.</description>
        <label>Last Modified By Foundation User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time_in_Foundation__c</fullName>
        <label>Last Modified Date\Time in Foundation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Law_Firm__c</fullName>
        <label>Law Firm</label>
        <picklist>
            <picklistValues>
                <fullName>Barbara Harris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barokas Martin &amp; Tomlinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binder and Malter, LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collier Halpern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freeborn &amp; Peters LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Griffin Griffin &amp; Alexander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross and Romanick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Raphaelson Esquire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holland &amp; Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James A. Polon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John R. Harness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keen &amp; Matney LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kimball Tirey &amp; St John</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Office of Puckett and Redford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices Michael McCarthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of David K Barhydt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Donna Ashton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Offices of Russo &amp; Scolnick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lehrman Kronick &amp; Lehrman LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallios Rider &amp; Goley LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcus Errico Emmer &amp; Brooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Modestino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miller Starr Regalia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pahl &amp; McCay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert P. Weisoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosenberg &amp; Estis P.C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teller and Levit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Todd B. Rothbard Attorney at Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wasserman-Stern Law Offices</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Fee_1__c</fullName>
        <label>Legal Fee 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Fee_2__c</fullName>
        <label>Legal Fee 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Fee_3__c</fullName>
        <label>Legal Fee 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Litigation_Type__c</fullName>
        <label>Litigation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Breach of Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Money_Judgment_Status__c</fullName>
        <label>Money Judgment Status</label>
        <picklist>
            <controllingField>Money_Judgment__c</controllingField>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Money_Judgment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Money Judgment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NTQ_Expiration_Date__c</fullName>
        <label>NTQ Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Payments_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used when absolutely no payments are accepted</description>
        <inlineHelpText>Check this box only when no payments accepted</inlineHelpText>
        <label>No Payments Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_to_Date__c</fullName>
        <label>Paid to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Default_Date__c</fullName>
        <description>This field is for the attorneys to add (Admin Case #00014474).</description>
        <label>Projected Default Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Lock_Out_Date__c</fullName>
        <label>Scheduled Lock-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vacated_Locked_Out__c</fullName>
        <label>Vacated\Locked Out</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eRentPayer_De_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eRentPayer De-Activated</label>
        <type>Checkbox</type>
    </fields>
    <label>Litigation Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>eRentPayer_De_Activated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{00000}</displayFormat>
        <label>Litigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litigation Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Spaces_in_Email</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( Email_Recipients__c , &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Email_Recipients__c</errorDisplayField>
        <errorMessage>Please remove spaces in the Email Recipients field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Law_Firm_Picklist</fullName>
        <active>false</active>
        <description>Validation Rule needed for Apex Data Loader loads of Litigation Activities.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Law_Firm__c, &quot;Griffin, Griffin, &amp; Alexander P.C.&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;James A. Polon&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;Keen &amp; Matney, LLC&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;Law Offices of Michael N. McCarthy, P.C.&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;Lehrman, Kronick &amp; Lehrman, LLP&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;Mallios, Rider, &amp; Goley, LLP&quot;)),
NOT(ISPICKVAL(Law_Firm__c, &quot;Robert P. Weisoff&quot;))
)</errorConditionFormula>
        <errorDisplayField>Law_Firm__c</errorDisplayField>
        <errorMessage>Please select a valid picklist value.</errorMessage>
    </validationRules>
</CustomObject>